Fixed grid gap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,7 +477,7 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto auto;
-  gap: 20px;
+  column-gap: 20px;
 }
 
 #selfie {
